# TabLer

./: .gitguardian.yaml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  plugin-registry.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  e2e.yml  release-validation.yml  release.yml
.qwen/: settings.json
docs/: UPGRADE_ROADMAP.md
docs/architecture/: E2E_TEST_STRATEGY.md
docs/operations/: STORAGE_RECOVERY.md
docs/product/: PROFESSIONAL_WORKFLOW_BASELINE.md
docs/roadmap/: EVIDENCE_TEMPLATE.md  SPRINT_0A_EVIDENCE.md  SPRINT_0B_EVIDENCE.md  SPRINT_0C_EVIDENCE.md
docs/security/: THREAT_MODEL.md
e2e/: run.mjs  wdio.conf.mjs
e2e/specs/: workspace-smoke.e2e.mjs
fixtures/: sql_statement_splitter_cases.json
plugins/opensearch-driver/: plugin.json
plugins/portable-formats/: plugin.json
scripts/: build-plugin-registry.mjs  check-release-contract.mjs  check-secret-leaks.mjs  check-sql-splitter.mjs  check-tauri-binary-target.mjs  generate-updater-manifest.mjs  minimax-amber-to-blue.mjs  minimax-fontsize-normalize.mjs  minimax-light-migrate.mjs  validate-updater-manifest.mjs  verify-release-assets.mjs
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: generate_capability_matrix.rs  prepare_e2e_fixtures.rs
src-tauri/icons/: icon.icns
src-tauri/mcp-stdio/: Cargo.toml
src-tauri/mcp-stdio/src/: main.rs
src-tauri/src/: ai_workspace_history.rs  clang_compat.h  lib.rs  main.rs  mcp.rs  mcp_local.rs  mcp_security.rs  observability.rs  query_history.rs  watcher.rs
src-tauri/src/commands/: ai.rs  connection.rs  connection_export.rs  data_export.rs  deep_link.rs  diagnostics.rs  export.rs  file.rs  maintenance.rs  mcp.rs  mod.rs  operations.rs  plugins.rs  query.rs  restore.rs  system.rs  table.rs  tabs.rs  terminal.rs  update.rs  users_roles.rs  window.rs  workspace_sync.rs
src-tauri/src/database/: ai_models.rs  bigquery.rs  capabilities.rs  cassandra.rs  clickhouse.rs  cloudflare_d1.rs  driver.rs  duckdb.rs  libsql.rs  manager.rs  mod.rs  models.rs  mongodb.rs  mssql.rs  mysql.rs  opensearch.rs  parameterized_query.rs  postgres.rs  query_common.rs  redis.rs  safety.rs  snowflake.rs  sqlite.rs
src-tauri/src/ssh/: mod.rs  ssh_tunnel.rs
src-tauri/src/storage/: ai_storage.rs  connection_storage.rs  file_storage.rs  mcp_storage.rs  migrations.rs  mod.rs  plugin_storage.rs  sql_favorites.rs  tab_persistence.rs
src-tauri/src/utils/: mod.rs  paths.rs  rate_limiter.rs  sql.rs
src/components/: AppAboutModal.tsx  AppKeyboardHandler.tsx  AppMcpIntegrationsModal.tsx  AppPluginManagerModal.tsx  AppShortcutsModal.tsx  AppTitleBar.tsx  AppUserRolesModal.tsx  AppWorkspacePanel.tsx  ConfirmDialog.tsx  DiagnosticBundleModal.tsx  (+4 more)
website/: README.md  package-lock.json  package.json
(+376 files in other folders)
