[package]
name = "tabler"
version = "0.1.0"
description = "TableR - Cross-platform database client"
authors = ["TableR Team"]
edition = "2021"

[lib]
name = "tabler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "postgres", "sqlite", "json", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
rfd = "0.15"
futures-util = "0.3"
fs2 = "0.4"
libsql = { version = "0.9.30", default-features = false, features = ["remote", "tls"] }
tiberius = { version = "0.12.3", default-features = false, features = ["rustls", "tds73", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
duckdb = { version = "1.10501.0", features = ["bundled"] }
redis = "1.1.0"
shlex = "1"
mongodb = "3.5.2"
json5 = "0.4"
scylla = "1.5.0"
portable-pty = "0.9.0"
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
